# Stellar

./: .gitignore  README.md  package.json  pnpm-lock.yaml
contracts/launchpad-factory/: Cargo.toml
contracts/launchpad-factory/src/: lib.rs  main.rs
contracts/lending-pool/: Cargo.toml
contracts/lending-pool/src/: lib.rs  main.rs
contracts/soulbound-nft/: Cargo.toml
contracts/soulbound-nft/src/: lib.rs  main.rs
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Navbar.tsx
frontend/src/pages/: Dashboard.tsx  Home.tsx  Investment.tsx  Profile.tsx  ProjectDetail.tsx  Projects.tsx  SubmitProject.tsx
frontend/src/services/: api.ts
frontend/src/stores/: walletStore.ts
scripts/: deploy-mainnet.js  deploy-testnet.js
